feat(designer): Legacy Managed Identity connection support (#2285)
* Finished most of legacy managed identity connection UI work

* Passing the identity for updating the connection reference after connection creation

* Small PR changes

---------

Co-authored-by: Priti Sambandam <psamband@microsoft.com>

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -231,7 +231,6 @@
   "8ubEPi": "Request Options",
   "8wlfdo": "Suppress workflow headers on response",
   "8wr0zO": "Adds an integer number of days to a string timestamp passed in",
-  "8yjjTX": "Connect via Service Principal",
   "9/UeTh": "Returns a single array or object that has common elements between arrays or objects passed in",
   "9/vdrb": "(UTC+07:00) Hovd",
   "90Q7Pw": "Value",
@@ -325,6 +324,7 @@
   "DZc8wP": "Custom value does not match the schema node's type",
   "DfS13/": "(UTC-10:00) Aleutian Islands",
   "Dhu3IS": "Show mini-map",
+  "DjbVKU": "OAuth",
   "DkF25I": "Expand Static Result",
   "DsPDVB": "Trigger condition cannot be empty",
   "DuXV2M": "(UTC-01:00) Azores",
@@ -519,6 +519,7 @@
   "NvANon": "(UTC-09:00) Alaska",
   "NvJDn/": "Tuesday",
   "O+8vRv": "Returns a binary representation of a value",
+  "O/fh9A": "Service Principal",
   "O27gKq": "Loading Files...",
   "O36+wl": "Edit Parameter",
   "O9ZExg": "OK",
@@ -636,7 +637,6 @@
   "TZh8nV": "on {weekDays} {frequencyDesc}",
   "Tayrub": "Raw",
   "Tb2QLA": "Client request ID",
-  "TeRxLv": "Use a service principal to connect using application permissions.",
   "TgcgXE": "Tags",
   "Tiqnir": "Custom",
   "Tmr/9e": "Invalid parameters",
@@ -736,6 +736,7 @@
   "YJJ+gQ": "String",
   "YKXmKD": "Enables an expression to derive its value from other JSON name and value pairs or the output of the runtime trigger",
   "YOUfNf": "Enter Pfx",
+  "YRk271": "Authentication",
   "YUbSFS": "Yes/No",
   "YWOKlU": "Numbered List",
   "YaFjJQ": "Returns a single array or object with all the elements that are in either array or object passed to this function. The parameters for the function can either be a set of objects or a set of arrays (not a mixture thereof). If there are two objects with the same name in the final output, the last object with that name appears in the final object.",
@@ -992,7 +993,6 @@
   "_8ubEPi.comment": "title for request options setting",
   "_8wlfdo.comment": "title for workflow headers on response setting",
   "_8wr0zO.comment": "Label for description of custom addDays Function",
-  "_8yjjTX.comment": "Checkbox label for using an Service Pricipal connection",
   "_9/UeTh.comment": "Label for description of custom intersection Function",
   "_9/vdrb.comment": "Timezone value ",
   "_90Q7Pw.comment": "Raw Value Label Display Name",
@@ -1086,6 +1086,7 @@
   "_DZc8wP.comment": "Error message for when custom value does not match schema node type",
   "_DfS13/.comment": "Timezone value ",
   "_Dhu3IS.comment": "Label to show the mini-map",
+  "_DjbVKU.comment": "Dropdown text for OAuth connection",
   "_DkF25I.comment": "An accessible label for expand toggle icon",
   "_DsPDVB.comment": "error message for empty trigger condition",
   "_DuXV2M.comment": "Timezone value ",
@@ -1280,6 +1281,7 @@
   "_NvANon.comment": "Timezone value ",
   "_NvJDn/.comment": "Day of the week",
   "_O+8vRv.comment": "Label for description of custom binary Function",
+  "_O/fh9A.comment": "Dropdown text for service principal connection",
   "_O27gKq.comment": "Loading indicator message showing that the UX is getting the next list of files",
   "_O36+wl.comment": "Edit Button Tooltip Text",
   "_O9ZExg.comment": "Confirmation text for delete button",
@@ -1397,7 +1399,6 @@
   "_TZh8nV.comment": "Recurrence schedule description on days of week",
   "_Tayrub.comment": "Authentication type",
   "_Tb2QLA.comment": "Label text for retry client request ID",
-  "_TeRxLv.comment": "Tooltip for service principal connection checkbox",
   "_TgcgXE.comment": "Label For Tags in About Panel",
   "_Tiqnir.comment": "Option text for table column type in table editor",
   "_Tmr/9e.comment": "Text to explain that there are invalid parameters for this node",
@@ -1497,6 +1498,7 @@
   "_YJJ+gQ.comment": "This is an option in a dropdown where users can select type String for their parameter.",
   "_YKXmKD.comment": "Label for description of custom trigger Function",
   "_YOUfNf.comment": "Client Certificate Pfx Placeholder Text",
+  "_YRk271.comment": "Label for legacy multi auth dropdown",
   "_YUbSFS.comment": "Placeholder title for a newly inserted Boolean parameter",
   "_YWOKlU.comment": "Numbered List text",
   "_YaFjJQ.comment": "Label for signatures of custom union Function",
@@ -1688,7 +1690,6 @@
   "_iql+jn.comment": "This is a period in time in seconds. {seconds} is replaced by the number and s is an abbreviation of seconds",
   "_isnFBi.comment": "Message on switching levels with nodes/mappings not connected to a target schema node",
   "_iy8rNf.comment": "Button text for running test",
-  "_izS5yQ.comment": "Learn more link text",
   "_j1VU25.comment": "Timezone value ",
   "_j2MU0b.comment": "Label for description of custom removeProperty Function",
   "_j39557.comment": "Label for description of custom variables Function",
@@ -1729,6 +1730,7 @@
   "_kuFK3E.comment": "Invalid authentication without type property",
   "_kxMDyM.comment": "Error validation message",
   "_l36V56.comment": "This is a time duration in full non abbreviated format",
+  "_l72gf4.comment": "Dropdown text for legacy managed identity connection",
   "_lFve22.comment": "Timezone value ",
   "_lIPWQ6.comment": "Timezone value ",
   "_lPTdSf.comment": "Button text for run trigger",
@@ -2193,7 +2195,6 @@
   "iql+jn": "{seconds}s",
   "isnFBi": "Elements and mappings not connected to a target element are removed.",
   "iy8rNf": "Test",
-  "izS5yQ": "Learn more",
   "j1VU25": "(UTC+14:00) Kiritimati Island",
   "j2MU0b": "Returns an object with a property removed",
   "j39557": "Returns the value of the variable specified.",
@@ -2234,6 +2235,7 @@
   "kuFK3E": "Missing authentication type property: 'type'.",
   "kxMDyM": "Enter a valid json.",
   "l36V56": "{hours} hours {minutes} minutes",
+  "l72gf4": "Managed Identity",
   "lFve22": "(UTC+01:00) Sarajevo, Skopje, Warsaw, Zagreb",
   "lIPWQ6": "(UTC+07:00) Bangkok, Hanoi, Jakarta",
   "lPTdSf": "Run trigger",
