fix(designer): Adding validation on operation rename

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1646,6 +1646,7 @@
   "_gQt/0f.comment": "Label for conversion functions",
   "_gRUmiA.comment": "Info about token picker",
   "_gTXyUo.comment": "Label for timezone",
+  "_gUp23R.comment": "Text for invalid operation title name",
   "_gWRF8m.comment": "title for trigger conditions setting",
   "_gc6v4X.comment": "Text for system assigned managed identity",
   "_gfBWfH.comment": "Label for Email type dynamically added parameter",
@@ -2151,6 +2152,7 @@
   "gQt/0f": "Conversion functions",
   "gRUmiA": "Info",
   "gTXyUo": "Time Zone",
+  "gUp23R": "The name already exists or is invalid, please update it before proceeding.",
   "gWRF8m": "Trigger Conditions",
   "gc6v4X": "System-assigned managed identity",
   "gfBWfH": "Email",
