mark empty string parameter as not present

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -422,6 +422,7 @@
   "IQyOth": "If available, dynamic content is automatically generated from the connectors and actions you choose for your flow.",
   "IUE/lQ": "(UTC-01:00) Cabo Verde Is.",
   "IW2MjQ": "Converts a string timestamp passed in from a UTC to a target time zone",
+  "IX1OiA": "Failed to retrieve dynamic outputs, outputs of this operation might not be visible in subsequent actions. Error details: {message}",
   "IXy91L": "Add a target schema",
   "IbGIq3": "Error Code",
   "IjEKvh": "Error executing the api ''{parameters}''.",
@@ -615,7 +616,6 @@
   "SmCQys": "Custom Tracking Id",
   "Sr8PcK": "No operations found",
   "SvQyvs": "Done",
-  "Sw+u4M": "Failed to retrive dynamic inputs. Error details: ''{message}''",
   "SyFXM3": "Read less",
   "Sz8KN3": "Test",
   "T0BFpC": "Set the tracking id for the run. For split-on this tracking id is for the initiating request.",
@@ -1184,6 +1184,7 @@
   "_IQyOth.comment": "Section 1 of text for including dynamic content section",
   "_IUE/lQ.comment": "Timezone value ",
   "_IW2MjQ.comment": "Label for description of custom convertFromUtc Function",
+  "_IX1OiA.comment": "Error message to show when loading dynamic outputs failed.",
   "_IXy91L.comment": "label to inform to add a target schema to be used",
   "_IbGIq3.comment": "The title of the error code property within Error in the static result schema",
   "_IjEKvh.comment": "Error message when execute dynamic api in managed connector. Do not remove the double single quotes around the placeholder text, as it is needed to wrap the placeholder text in single quotes.",
@@ -1377,7 +1378,6 @@
   "_SmCQys.comment": "title for client tracking id setting",
   "_Sr8PcK.comment": "Message to show when no operations are found",
   "_SvQyvs.comment": "confirmation text",
-  "_Sw+u4M.comment": "Error message to show when loading dynamic inputs failed",
   "_SyFXM3.comment": "Text for read less button",
   "_Sz8KN3.comment": "Test",
   "_T0BFpC.comment": "description of tracking id input field of split on setting",
@@ -1888,6 +1888,7 @@
   "_sw6EXK.comment": "The title of the status property in the static result schema",
   "_syiNc+.comment": "Browse for file",
   "_sys5gu.comment": "Authentication type",
+  "_sytRna.comment": "Error message to show when loading dynamic inputs failed",
   "_t+XCkg.comment": "Required string parameter for destination time zone",
   "_tAbbH8.comment": "Title for a too many inputs card",
   "_tAeKNh.comment": "Function display radio group option for simple",
@@ -1969,7 +1970,6 @@
   "_wV3Lmd.comment": "Label to delete dictionary item",
   "_wWVQuK.comment": "Label for description of custom if Function",
   "_wXJALc.comment": "Open dynamically added parameter options menu",
-  "_wit5UT.comment": "Error message to show when loading dynamic outputs failed.",
   "_wkiETV.comment": "Client Tracking ID text",
   "_wkvUUA.comment": "Title for the input type mismatch card",
   "_wl7X0l.comment": "Label to hide the mini-map",
@@ -2394,6 +2394,7 @@
   "sw6EXK": "Status",
   "syiNc+": "Browse",
   "sys5gu": "Client Certificate",
+  "sytRna": "Failed to retrieve dynamic inputs. Error details: ''{message}''",
   "t+XCkg": "Required. A string that contains the time zone name of the destination time zone. See https://msdn.microsoft.com/en-us/library/gg154758.aspx for details.",
   "tAbbH8": "Too many inputs assigned",
   "tAeKNh": "Simple",
@@ -2475,7 +2476,6 @@
   "wV3Lmd": "Click to delete item",
   "wWVQuK": "Returns a specified value based on whether the expression resulted in true or false",
   "wXJALc": "Menu",
-  "wit5UT": "Failed to retrive dynamic outputs, outputs of this operation might not be visible in subsequent actions. Error details: {message}",
   "wkiETV": "Client Tracking ID",
   "wkvUUA": "Input type mismatch",
   "wl7X0l": "Hide mini-map",
