--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1,5 +1,6 @@
 {
   "++ZVe/": "Testing",
+  "+0H8Or": "Warning: input node type does not match the schema node's type",
   "+0yxlR": "Function display",
   "+20fdv": "Invalid properties '{0}' for authentication type '{1}'.",
   "+3efoo": "No schema is added",
@@ -182,6 +183,7 @@
   "65FlWi": "(UTC+08:45) Eucla",
   "6OSgRP": "Test map",
   "6PdOcy": "Cancel",
+  "6WmLx1": "Warning: input node type does not match one of the allowed types for this input",
   "6XR3FS": "(UTC+09:30) Adelaide",
   "6gZ4I3": "Function ''{functionName}'' has too many inputs assigned to it",
   "6jiO7t": "Show run",
@@ -261,7 +263,6 @@
   "ALImBL": "(UTC+00:00) Monrovia, Reykjavik",
   "ANbEeQ": "Required. The name of the action whose values you want.",
   "AO6T9u": "Done",
-  "AX7dq3": "Input node type does not match the schema node's type",
   "AYaqW/": "(UTC+06:30) Yangon (Rangoon)",
   "AcdX+2": "Insert data from previous step (You can also add by typing / in the editor)",
   "Aci186": "{label} Add dynamic data pressing Alt + /",
@@ -281,7 +282,7 @@
   "BAgRzO": "(UTC-08:00) Coordinated Universal Time-08",
   "BBD8Em": "Key",
   "BCAnZP": "Either a single format specifier character or a custom format pattern that indicates how to format the value of this timestamp. If format is not provided, the ISO 8601 format ('o') is used.",
-  "BEZWxB": "Clear custom value",
+  "BCgiRh": "Warning: custom value does not match one of the allowed types for this input",
   "BHe7qY": "Required. The URI encoded string.",
   "BJNUxN": "Path Parameters",
   "BKL0ZG": "Start time",
@@ -320,7 +321,6 @@
   "DWd9vy": "every week",
   "DWsh56": "Enter client ID",
   "DZZ3fj": "Duration",
-  "DZc8wP": "Custom value does not match the schema node's type",
   "DfS13/": "(UTC-10:00) Aleutian Islands",
   "Dhu3IS": "Show mini-map",
   "DjbVKU": "OAuth",
@@ -426,7 +426,6 @@
   "IbGIq3": "Error Code",
   "IjEKvh": "Error executing the api ''{parameters}''.",
   "IjZFjQ": "(UTC+07:00) Barnaul, Gorno-Altaysk",
-  "IooQu1": "Advanced options",
   "Ip7Iax": "Returns the index of the n-th occurrence of a value within a string (case-insensitive, invariant culture)",
   "IpVwYT": "Returns the first non-null object in the arguments passed in",
   "IsVhkH": "No properties",
@@ -531,7 +530,6 @@
   "OH9xlX": "10",
   "OIOexo": "On these days",
   "OKszbi": "Connection Name",
-  "OL5S5H": "Enter custom value",
   "OOUSLP": "This function doesn't require any input.",
   "OOUTdW": "Loading all connectors...",
   "OSHNZ2": "Comment",
@@ -545,7 +543,6 @@
   "P+7G62": "Heading 3",
   "P+mWgV": "Pfx",
   "P2A5dB": "Required. This value is the number of integers that is in the array.",
-  "P2rzqn": "Default value",
   "P4rEwD": "Collection functions",
   "P6I90y": "Input",
   "P8ZBF9": "Required. The collection to take the first object from.",
@@ -565,7 +562,6 @@
   "PeLrFb": "(UTC+03:00) Moscow, St. Petersburg, Volgograd",
   "PfCJlN": "Workflow functions",
   "PmB0J7": "(UTC-04:00) Turks and Caicos",
-  "PtqSHp": "Do not generate if no value",
   "PvWTxR": "Show functions",
   "Pvm0xB": "Returns the base 64 representation of the input string",
   "Q+oELo": "(UTC+04:00) Izhevsk, Samara",
@@ -696,6 +692,7 @@
   "WTZvGW": "Workflow has invalid connections on the following operations: {invalidNodes}",
   "WUe3DY": "Shorthand for trigger().outputs",
   "WcnIF8": "Remove",
+  "WgChTm": "(Custom value)",
   "WgoP7R": "Returns the result from multiplying the two numbers",
   "WnU9v0": "A managed identity is not configured on the logic app.",
   "X/7je+": "Minute",
@@ -740,7 +737,6 @@
   "YWOKlU": "Numbered List",
   "YaFjJQ": "Returns a single array or object with all the elements that are in either array or object passed to this function. The parameters for the function can either be a set of objects or a set of arrays (not a mixture thereof). If there are two objects with the same name in the final output, the last object with that name appears in the final object.",
   "YfwZJO": "Search Tips",
-  "Yh5OVd": "Custom value does not match one of the allowed types for this input",
   "YlesUQ": "Your map is in perfect condition",
   "YoQara": "None",
   "Yuu5CD": "Zoom out",
@@ -761,6 +757,7 @@
   "ZkjTbp": "Learn more about dynamic content.",
   "ZnGRMP": "(UTC+07:00) Tomsk",
   "_++ZVe/.comment": "Title for testing section",
+  "_+0H8Or.comment": "Warning message for when input node type does not match schema node type",
   "_+0yxlR.comment": "Label for the function display radio group",
   "_+20fdv.comment": "Error message when having multiple invalid authentication properties",
   "_+3efoo.comment": "Placeholder when no schema has been added",
@@ -943,6 +940,7 @@
   "_65FlWi.comment": "Timezone value ",
   "_6OSgRP.comment": "Test map panel header",
   "_6PdOcy.comment": "Cancel",
+  "_6WmLx1.comment": "Warning message for when input node type does not match one of the function node input's allowed types",
   "_6XR3FS.comment": "Timezone value ",
   "_6gZ4I3.comment": "Body text for a too many inputs card",
   "_6jiO7t.comment": "Menu item text for show run",
@@ -1022,7 +1020,6 @@
   "_ALImBL.comment": "Timezone value ",
   "_ANbEeQ.comment": "Required string parameter to determine action wanted",
   "_AO6T9u.comment": "Done Label for button",
-  "_AX7dq3.comment": "Error message for when input node type does not match schema node type",
   "_AYaqW/.comment": "Timezone value ",
   "_AcdX+2.comment": "Label for button to open dynamic content token picker",
   "_Aci186.comment": "This is an a11y message meant to help screen reader users figure out how to insert dynamic data",
@@ -1042,7 +1039,7 @@
   "_BAgRzO.comment": "Timezone value ",
   "_BBD8Em.comment": "A placeholder for the dictionary key",
   "_BCAnZP.comment": "Optional string parameter to identify format of timestamp returned",
-  "_BEZWxB.comment": "Tooltip content for clearing custom value",
+  "_BCgiRh.comment": "Warning message for when custom value does not match one of the function node input's allowed types",
   "_BHe7qY.comment": "Required URI encoded string parameter to be converted using uriComponentToString function",
   "_BJNUxN.comment": "Display name for relative path parameters in trigger outputs",
   "_BKL0ZG.comment": "Column header text for start time",
@@ -1081,7 +1078,6 @@
   "_DWd9vy.comment": "Recurrence schedule description every week",
   "_DWsh56.comment": "Client ID Placeholder Text",
   "_DZZ3fj.comment": "Column header text for duration",
-  "_DZc8wP.comment": "Error message for when custom value does not match schema node type",
   "_DfS13/.comment": "Timezone value ",
   "_Dhu3IS.comment": "Label to show the mini-map",
   "_DjbVKU.comment": "Dropdown text for OAuth connection",
@@ -1187,7 +1183,6 @@
   "_IbGIq3.comment": "The title of the error code property within Error in the static result schema",
   "_IjEKvh.comment": "Error message when execute dynamic api in managed connector. Do not remove the double single quotes around the placeholder text, as it is needed to wrap the placeholder text in single quotes.",
   "_IjZFjQ.comment": "Timezone value ",
-  "_IooQu1.comment": "Advanced options",
   "_Ip7Iax.comment": "Label for description of custom nthIndexOf Function",
   "_IpVwYT.comment": "Label for description of custom coalesce Function",
   "_IsVhkH.comment": "No properties text",
@@ -1292,7 +1287,6 @@
   "_OH9xlX.comment": "Hour of the day",
   "_OIOexo.comment": "Label for schedule days",
   "_OKszbi.comment": "Connection Name",
-  "_OL5S5H.comment": "Label for dropdown option to enter custom value",
   "_OOUSLP.comment": "Function doesn't have or require inputs",
   "_OOUTdW.comment": "Message to show under the loading icon when loading connectors",
   "_OSHNZ2.comment": "Label for the comment textfield",
@@ -1306,7 +1300,6 @@
   "_P+7G62.comment": "Heading 3 text",
   "_P+mWgV.comment": "Client Certificate Pfx Label Display Name",
   "_P2A5dB.comment": "Required number parameter to identify number of integers in range function",
-  "_P2rzqn.comment": "Default value",
   "_P4rEwD.comment": "Label for collection functions",
   "_P6I90y.comment": "Input",
   "_P8ZBF9.comment": "Required collection parameter to apply first function on",
@@ -1326,7 +1319,6 @@
   "_PeLrFb.comment": "Timezone value ",
   "_PfCJlN.comment": "Label for workflow functions",
   "_PmB0J7.comment": "Timezone value ",
-  "_PtqSHp.comment": "Checkbox label to not generate if no value",
   "_PvWTxR.comment": "Label to open Functions list",
   "_Pvm0xB.comment": "Label for description of custom base64 Function",
   "_Q+oELo.comment": "Timezone value ",
@@ -1457,6 +1449,7 @@
   "_WTZvGW.comment": "Error message to show when there are invalid connections in the nodes.",
   "_WUe3DY.comment": "Label for description of custom triggerOutputs Function",
   "_WcnIF8.comment": "Remove card from canvas",
+  "_WgChTm.comment": "Suffix for a custom value drop down value.",
   "_WgoP7R.comment": "Label for description of custom mul Function",
   "_WnU9v0.comment": "Error message when no identity is associated",
   "_X/7je+.comment": "Frequency value ",
@@ -1501,7 +1494,6 @@
   "_YWOKlU.comment": "Numbered List text",
   "_YaFjJQ.comment": "Label for signatures of custom union Function",
   "_YfwZJO.comment": "Search tip header label",
-  "_Yh5OVd.comment": "Error message for when custom value does not match one of the function node input's allowed types",
   "_YlesUQ.comment": "Message displayed when map checker has no errors or warnings",
   "_YoQara.comment": "Display text for when About Panel has no Tags",
   "_Yuu5CD.comment": "Label to zoom the canvas out",
@@ -1572,7 +1564,6 @@
   "_ca/QIc.comment": "The title of the error message property within Error in the static result schema",
   "_cgq/+y.comment": "Placehodler text for dropdown",
   "_cj+kyo.comment": "This is a status message to be shown in a monitoring view",
-  "_cjcEOf.comment": "Error message for when input node type does not match one of the function node input's allowed types",
   "_cmTCsW.comment": "This is a generic error message shown when something in the app fails to load.",
   "_cqiqcf.comment": "Label text for retry start time",
   "_cr0UnG.comment": "Hour of the day",
@@ -1870,6 +1861,7 @@
   "_sDkAVZ.comment": "Label for description of custom triggerFormDataMultiValues Function",
   "_sFwHQc.comment": "aria label description for cancel button",
   "_sQ2vRs.comment": "add a case to switch statement",
+  "_sRpETS.comment": "Warning message for when custom value does not match schema node type",
   "_sW47JR.comment": "label for slider indicating the degree of parallelism",
   "_sYQDN+.comment": "Label for Font family dropdown",
   "_sZ0G/Z.comment": "Required string parameter to represent the unit of time",
@@ -2077,7 +2069,6 @@
   "ca/QIc": "Error Message",
   "cgq/+y": "Please select an identity",
   "cj+kyo": "Cancelled",
-  "cjcEOf": "Input node type does not match one of the allowed types for this input",
   "cmTCsW": "Error loading component.",
   "cqiqcf": "Start time",
   "cr0UnG": "9",
@@ -2375,6 +2366,7 @@
   "sDkAVZ": "Returns an array of values matching the key name from form-data or form-encoded trigger output",
   "sFwHQc": "Cancel creating a connection",
   "sQ2vRs": "Add Case",
+  "sRpETS": "Warning: custom value does not match the schema node's type",
   "sW47JR": "Degree of Parallelism",
   "sYQDN+": "Formatting options for font family",
   "sZ0G/Z": "Required. A string containing the unit of time specified in the interval to add.",
