Major refactor for the input drop downs

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1,5 +1,6 @@
 {
   "++ZVe/": "Testing",
+  "+0H8Or": "Warning: input node type does not match the schema node's type",
   "+0yxlR": "Function display",
   "+Uvo/p": "Alt text for down chevron",
   "+ZSBrq": "Context menu for {title} card",
@@ -169,6 +170,7 @@
   "63/zYN": "Required. The object to check if it is greater than value being compared to.",
   "6OSgRP": "Test map",
   "6PdOcy": "Cancel",
+  "6WmLx1": "Warning: input node type does not match one of the allowed types for this input",
   "6fDYzG": "Failed to load the schema. Please try again.",
   "6gZ4I3": "Function ''{functionName}'' has too many inputs assigned to it",
   "6jiO7t": "Show run",
@@ -264,7 +266,7 @@
   "B999mz": "Line deleted.",
   "BBD8Em": "Key",
   "BCAnZP": "Either a single format specifier character or a custom format pattern that indicates how to format the value of this timestamp. If format is not provided, the ISO 8601 format ('o') is used.",
-  "BEZWxB": "Clear custom value",
+  "BCgiRh": "Warning: custom value does not match one of the allowed types for this input",
   "BHe7qY": "Required. The URI encoded string.",
   "BJNUxN": "Path Parameters",
   "BKL0ZG": "Start time",
@@ -309,7 +311,6 @@
   "DWsh56": "Enter client ID",
   "DYXoEM": "(UTC+02:00) Chisinau",
   "DZZ3fj": "Duration",
-  "DZc8wP": "Custom value does not match the schema node's type",
   "Dhu3IS": "Show mini-map",
   "DjbVKU": "OAuth",
   "DkF25I": "Expand Static Result",
@@ -420,7 +421,6 @@
   "If+p6C": "(UTC+09:00) Yakutsk",
   "IjEKvh": "Error executing the api ''{parameters}''.",
   "Io48jC": "The '{0}' properties are invalid for the '{1}' authentication type.",
-  "IooQu1": "Advanced options",
   "IsVhkH": "No properties",
   "IxWip7": "(UTC+03:00) Moscow, St. Petersburg, Volgograd",
   "J/Kz1j": "Asynchronous Pattern",
@@ -527,7 +527,6 @@
   "OH9xlX": "10",
   "OIOexo": "On these days",
   "OKszbi": "Connection Name",
-  "OL5S5H": "Enter custom value",
   "OOUSLP": "This function doesn't require any input.",
   "OOUTdW": "Loading all connectors...",
   "OSHNZ2": "Comment",
@@ -546,7 +545,6 @@
   "P/S+q5": "Required. One of the strings to combine into a single string.",
   "P/dnfK": "(UTC+06:00) Dhaka",
   "P2A5dB": "Required. This value is the number of integers that is in the array.",
-  "P2rzqn": "Default value",
   "P4rEwD": "Collection functions",
   "P6I90y": "Input",
   "P8ZBF9": "Required. The collection to take the first object from.",
@@ -566,7 +564,6 @@
   "PjBcG3": "(UTC+02:00) Amman",
   "Pk4cb+": "Tracked properties",
   "Pq+4a+": "(UTC+02:00) Cairo",
-  "PtqSHp": "Do not generate if no value",
   "Pudllg": "(UTC+07:00) Hovd",
   "PvWTxR": "Show functions",
   "Pvm0xB": "Returns the base 64 representation of the input string",
@@ -610,7 +607,6 @@
   "SGnTpt": "Heading 2",
   "SJFVxf": "issues",
   "SKXopi": "Convert the parameter to an integer",
-  "SKy5tj": "The input node type doesn't match the schema node's type.",
   "SLJkRn": "Remove input",
   "SLZ0n4": "Checks if the string starts with a value (case-insensitive, invariant culture)",
   "SToblZ": "Configure parameters for this node",
@@ -703,6 +699,7 @@
   "WUe3DY": "Shorthand for trigger().outputs",
   "WaTsxR": "Request History",
   "WcnIF8": "Remove",
+  "WgChTm": "(Custom value)",
   "WgoP7R": "Returns the result from multiplying the two numbers",
   "WnU9v0": "A managed identity is not configured on the logic app.",
   "X/7je+": "Minute",
@@ -755,7 +752,6 @@
   "YdQw4/": "Format text as italic. Shortcut: ⌘I",
   "YfwZJO": "Search Tips",
   "YgU88A": "(UTC+05:30) Chennai, Kolkata, Mumbai, New Delhi",
-  "Yh5OVd": "Custom value does not match one of the allowed types for this input",
   "YiOybp": "(UTC+01:00) Brussels, Copenhagen, Madrid, Paris",
   "YlesUQ": "Your map is in perfect condition",
   "YoQara": "None",
@@ -775,6 +771,7 @@
   "Zi9gQK": "Add new item",
   "ZkjTbp": "Learn more about dynamic content.",
   "_++ZVe/.comment": "Title for testing section",
+  "_+0H8Or.comment": "Warning message for when input node type does not match schema node type",
   "_+0yxlR.comment": "Label for the function display radio group",
   "_+Uvo/p.comment": "Alt text for down chevron",
   "_+ZSBrq.comment": "Accessibility label",
@@ -944,6 +941,7 @@
   "_63/zYN.comment": "Required object parameter to compare to in less function",
   "_6OSgRP.comment": "Test map panel header",
   "_6PdOcy.comment": "Cancel",
+  "_6WmLx1.comment": "Warning message for when input node type does not match one of the function node input's allowed types",
   "_6fDYzG.comment": "Load schema error message",
   "_6gZ4I3.comment": "Body text for a too many inputs card",
   "_6jiO7t.comment": "Menu item text for show run",
@@ -1039,7 +1037,7 @@
   "_B999mz.comment": "Message on deleting connection",
   "_BBD8Em.comment": "A placeholder for the dictionary key",
   "_BCAnZP.comment": "Optional string parameter to identify format of timestamp returned",
-  "_BEZWxB.comment": "Tooltip content for clearing custom value",
+  "_BCgiRh.comment": "Warning message for when custom value does not match one of the function node input's allowed types",
   "_BHe7qY.comment": "Required URI encoded string parameter to be converted using uriComponentToString function",
   "_BJNUxN.comment": "Display name for relative path parameters in trigger outputs",
   "_BKL0ZG.comment": "Column header text for start time",
@@ -1084,7 +1082,6 @@
   "_DWsh56.comment": "Client ID Placeholder Text",
   "_DYXoEM.comment": "Time zone value ",
   "_DZZ3fj.comment": "Column header text for duration",
-  "_DZc8wP.comment": "Error message for when custom value does not match schema node type",
   "_Dhu3IS.comment": "Label to show the mini-map",
   "_DjbVKU.comment": "Dropdown text for OAuth connection",
   "_DkF25I.comment": "An accessible label for expand toggle icon",
@@ -1195,7 +1192,6 @@
   "_If+p6C.comment": "Time zone value ",
   "_IjEKvh.comment": "Error message when execute dynamic api in managed connector. Do not remove the double single quotes around the placeholder text, as it is needed to wrap the placeholder text in single quotes.",
   "_Io48jC.comment": "Error message when having multiple invalid authentication properties",
-  "_IooQu1.comment": "Advanced options",
   "_IsVhkH.comment": "No properties text",
   "_IxWip7.comment": "Time zone value ",
   "_J/Kz1j.comment": "title for async pattern setting",
@@ -1302,7 +1298,6 @@
   "_OH9xlX.comment": "Hour of the day",
   "_OIOexo.comment": "Label for schedule days",
   "_OKszbi.comment": "Connection Name",
-  "_OL5S5H.comment": "Label for dropdown option to enter custom value",
   "_OOUSLP.comment": "Function doesn't have or require inputs",
   "_OOUTdW.comment": "Message to show under the loading icon when loading connectors",
   "_OSHNZ2.comment": "Label for the comment textfield",
@@ -1321,7 +1316,6 @@
   "_P/S+q5.comment": "Required string parameter required to combine strings",
   "_P/dnfK.comment": "Time zone value ",
   "_P2A5dB.comment": "Required number parameter to identify number of integers in range function",
-  "_P2rzqn.comment": "Default value",
   "_P4rEwD.comment": "Label for collection functions",
   "_P6I90y.comment": "Input",
   "_P8ZBF9.comment": "Required collection parameter to apply first function on",
@@ -1341,7 +1335,6 @@
   "_PjBcG3.comment": "Time zone value ",
   "_Pk4cb+.comment": "title for tracked properties setting",
   "_Pq+4a+.comment": "Time zone value ",
-  "_PtqSHp.comment": "Checkbox label to not generate if no value",
   "_Pudllg.comment": "Time zone value ",
   "_PvWTxR.comment": "Label to open Functions list",
   "_Pvm0xB.comment": "Label for description of custom base64 Function",
@@ -1385,7 +1378,6 @@
   "_SGnTpt.comment": "Heading 2 text",
   "_SJFVxf.comment": "Issues, plural",
   "_SKXopi.comment": "Label for description of custom int Function",
-  "_SKy5tj.comment": "Error message for when input node type does not match schema node type",
   "_SLJkRn.comment": "Remove input",
   "_SLZ0n4.comment": "Label for description of custom startsWith Function",
   "_SToblZ.comment": "Parameters tab description",
@@ -1478,6 +1470,7 @@
   "_WUe3DY.comment": "Label for description of custom triggerOutputs Function",
   "_WaTsxR.comment": "The tab label for the request history tab on the operation panel",
   "_WcnIF8.comment": "Remove card from canvas",
+  "_WgChTm.comment": "Suffix for a custom value drop down value.",
   "_WgoP7R.comment": "Label for description of custom mul Function",
   "_WnU9v0.comment": "Error message when no identity is associated",
   "_X/7je+.comment": "Frequency value ",
@@ -1530,7 +1523,6 @@
   "_YdQw4/.comment": "label to make italic text for Mac users",
   "_YfwZJO.comment": "Search tip header label",
   "_YgU88A.comment": "Time zone value ",
-  "_Yh5OVd.comment": "Error message for when custom value does not match one of the function node input's allowed types",
   "_YiOybp.comment": "Time zone value ",
   "_YlesUQ.comment": "Message displayed when map checker has no errors or warnings",
   "_YoQara.comment": "Display text for when About Panel has no Tags",
@@ -1600,7 +1592,6 @@
   "_cgq/+y.comment": "Placehodler text for dropdown",
   "_ciLkfU.comment": "Command for bold text for Mac users",
   "_cj+kyo.comment": "This is a status message to be shown in a monitoring view",
-  "_cjcEOf.comment": "Error message for when input node type does not match one of the function node input's allowed types",
   "_cmTCsW.comment": "This is a generic error message shown when something in the app fails to load.",
   "_cqiqcf.comment": "Label text for retry start time",
   "_cr0UnG.comment": "Hour of the day",
@@ -1925,6 +1916,7 @@
   "_sFbnCs.comment": "Time zone value ",
   "_sFwHQc.comment": "aria label description for cancel button",
   "_sQ2vRs.comment": "add a case to switch statement",
+  "_sRpETS.comment": "Warning message for when custom value does not match schema node type",
   "_sW47JR.comment": "label for slider indicating the degree of parallelism",
   "_sYQDN+.comment": "Label for Font family dropdown",
   "_sZ0G/Z.comment": "Required string parameter to represent the unit of time",
@@ -2143,7 +2135,6 @@
   "cgq/+y": "Please select an identity",
   "ciLkfU": "Bold (⌘B)",
   "cj+kyo": "Cancelled",
-  "cjcEOf": "Input node type does not match one of the allowed types for this input",
   "cmTCsW": "Error loading component.",
   "cqiqcf": "Start time",
   "cr0UnG": "9",
@@ -2468,6 +2459,7 @@
   "sFbnCs": "(UTC-05:00) Chetumal",
   "sFwHQc": "Cancel creating a connection",
   "sQ2vRs": "Add Case",
+  "sRpETS": "Warning: custom value does not match the schema node's type",
   "sW47JR": "Degree of Parallelism",
   "sYQDN+": "Formatting options for font family",
   "sZ0G/Z": "Required. A string containing the unit of time specified in the interval to add.",
