--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -255,6 +255,7 @@
   "9x8hg8": "Edit in basic mode",
   "A5Ferh": "Source element removed from view.",
   "ADM1Z8": "Authentication Type",
+  "AEguAy": "Empty value",
   "AGCm1p": "Name",
   "AHB418": "Filter Actions",
   "AIL7WX": "(UTC+02:00) Gaza, Hebron",
@@ -601,6 +602,7 @@
   "RhH4pF": "{minutes, plural, one {# minute} other {# minutes}}",
   "RkgScy": "6",
   "RnBddN": "issue",
+  "Rq2U5n": "Unrecognized expression ''{expression}''",
   "SADSSs": "(UTC+12:00) Petropavlovsk-Kamchatsky - Old",
   "SCCE6s": "Password",
   "SGnTpt": "Heading 2",
@@ -1016,6 +1018,7 @@
   "_9x8hg8.comment": "Button Label when clicked to swith to basic editor",
   "_A5Ferh.comment": "Message on removing source node",
   "_ADM1Z8.comment": "Label for Authentication Type dropdown",
+  "_AEguAy.comment": "Error message on expression evaluation",
   "_AGCm1p.comment": "Header for resource name",
   "_AHB418.comment": "Filter Actions",
   "_AIL7WX.comment": "Timezone value ",
@@ -1362,6 +1365,7 @@
   "_RhH4pF.comment": "A duration of time shown in minutes",
   "_RkgScy.comment": "Hour of the day",
   "_RnBddN.comment": "Issue, singular",
+  "_Rq2U5n.comment": "Error message on invalid expression",
   "_SADSSs.comment": "Timezone value ",
   "_SCCE6s.comment": "Basic Password Label Display Name",
   "_SGnTpt.comment": "Heading 2 text",
