--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -339,7 +339,6 @@
   "ERVorY": "Make Group",
   "ESZXfC": "At these minutes",
   "EUQDM6": "Add an action",
-  "EV9iRu": "Failed to save.",
   "EYqGxA": "(UTC+02:00) Athens, Bucharest",
   "EZz5q7": "Required. The index of where to start extracting the substring.",
   "Ea/fr+": "Every {interval} days",
@@ -1100,7 +1099,6 @@
   "_ERVorY.comment": "Make group button",
   "_ESZXfC.comment": "Label for schedule minutes",
   "_EUQDM6.comment": "Text for the \"Add Action\" page header",
-  "_EV9iRu.comment": "Message on failed save",
   "_EYqGxA.comment": "Timezone value ",
   "_EZz5q7.comment": "Required start index parameter to obtain substring",
   "_Ea/fr+.comment": "Recurrence schedule description every interval days",
@@ -1582,6 +1580,7 @@
   "_dDYCuU.comment": "Link text to open URL",
   "_dL9V5t.comment": "Text to show label for managed identity selector",
   "_dOpdsP.comment": "Update Expression",
+  "_dPa7+6.comment": "Button text for generate the map",
   "_dQmi91.comment": "Label for Frequency",
   "_dSTRb/.comment": "description of content transfer setting",
   "_dUZi34.comment": "Timezone value ",
@@ -1600,6 +1599,7 @@
   "_e00zot.comment": "Recurrence parameter group title",
   "_e4Onhn.comment": "This is a status message to be shown in a monitoring view",
   "_e9OvzW.comment": "Clear",
+  "_e9bIKh.comment": "Message on failed generation",
   "_eFet4K.comment": "Action Tracking ID text",
   "_eGa1Wa.comment": "Timezone value ",
   "_eHgfpz.comment": "Swagger url input error message",
@@ -1861,6 +1861,7 @@
   "_rSIBjh.comment": "Parameter Field Value Placeholder Text",
   "_raBiud.comment": "Require parameters to find maximum using max function",
   "_rcz4w4.comment": "Label for description of custom uriComponent Function",
+  "_rd6fai.comment": "Aria describing the way to control the keyboard navigation",
   "_rsdJcV.comment": "Main message displayed in the placeholder",
   "_rstpaK.comment": "Timezone value ",
   "_rv0Pn+.comment": "Add new option",
@@ -2087,6 +2088,7 @@
   "dDYCuU": "Learn more",
   "dL9V5t": "Managed identity",
   "dOpdsP": "Update",
+  "dPa7+6": "Generate",
   "dQmi91": "Frequency",
   "dSTRb/": "Specify the behavior and capabilities for transferring content over HTTP. Large messages may be split up into smaller requests to the connector to allow large message upload. Details can be found at http://aka.ms/logicapps-chunk#upload-content-in-chunks",
   "dUZi34": "(UTC+12:45) Chatham Islands",
@@ -2105,6 +2107,7 @@
   "e00zot": "How often do you want to check for items?",
   "e4Onhn": "Not specified",
   "e9OvzW": "Clear",
+  "e9bIKh": "Failed to generate XSLT.",
   "eFet4K": "Action Tracking ID",
   "eGa1Wa": "(UTC+05:00) Ekaterinburg",
   "eHgfpz": "Please enter a valid URL",
@@ -2366,6 +2369,7 @@
   "rSIBjh": "Enter value for parameter.",
   "raBiud": "Required. Either an array of values to find the maximum value, or the first value of a set.",
   "rcz4w4": "Returns a URI encoded representation of a value",
+  "rd6fai": "Use left and right arrow keys to navigate between commands",
   "rsdJcV": "Select source schema elements to build your map",
   "rstpaK": "(UTC-06:00) Central Time (US & Canada)",
   "rv0Pn+": "Add new",
