fix(designer): Fixing recommendation header for trigger

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1581,6 +1581,7 @@
   "_cscezV.comment": "Required collection parameter to apply skip function on",
   "_d4xMIx.comment": "Timezone value ",
   "_dBWIjR.comment": "Title for an unconnected required schema card",
+  "_dBxX0M.comment": "Text for the \"Add Trigger\" page header",
   "_dDYCuU.comment": "Link text to open URL",
   "_dL9V5t.comment": "Text to show label for managed identity selector",
   "_dOpdsP.comment": "Update Expression",
@@ -2089,6 +2090,7 @@
   "cscezV": "Required. The collection to skip the first Count objects from.",
   "d4xMIx": "(UTC+02:00) Harare, Pretoria",
   "dBWIjR": "Schema is missing required inputs",
+  "dBxX0M": "Add a trigger",
   "dDYCuU": "Learn more",
   "dL9V5t": "Managed identity",
   "dOpdsP": "Update",
