Split map overview and global view

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1740,6 +1740,7 @@
   "_lPTdSf.comment": "Button text for run trigger",
   "_lQNKUB.comment": "Describes connection being added",
   "_lR7V87.comment": "Section header for the functions section",
+  "_lUm6fl.comment": "Button text for returning to the canvas",
   "_lZT0JI.comment": "Button to add group",
   "_lcVG4C.comment": "skipped run",
   "_lcxLiq.comment": "Error Message for Invalid Array",
@@ -2249,6 +2250,7 @@
   "lPTdSf": "Run trigger",
   "lQNKUB": "A line for the parent element is added automatically.",
   "lR7V87": "Functions",
+  "lUm6fl": "Return",
   "lZT0JI": "Add Group",
   "lcVG4C": "is skipped",
   "lcxLiq": "Please enter a valid array",
