--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -165,6 +165,7 @@
   "5FINOY": "Workflow has parameter validation errors on the following operations: {invalidNodes}",
   "5J7j9k": "Required. The XPath expression to evaluate.",
   "5MWmiO": "Line Number",
+  "5OvGgn": "Body",
   "5SAQOb": "Authority",
   "5aa76N": "Returns the first element in the array or string passed in",
   "5akc1Q": "Unsupported 'in' value : ''{value}'' in Parameter",
@@ -731,6 +732,7 @@
   "Y/bcmG": "Password",
   "Y0H9aX": "More Info",
   "Y9kBz5": "Returns a binary representation of a data URI",
+  "YABOLz": "Body Item",
   "YCFhzp": "Add children",
   "YHsAKl": "Operation note",
   "YIBDSH": "{days}d",
@@ -928,6 +930,7 @@
   "_5FINOY.comment": "Error message to show when there are invalid connections in the nodes.",
   "_5J7j9k.comment": "Required xpath parameter to identify which xPath to evaluate",
   "_5MWmiO.comment": "The title of the line number field in the static result parseJson action",
+  "_5OvGgn.comment": "The title of the body field in the static result query action",
   "_5SAQOb.comment": "Authority Label Display Name",
   "_5aa76N.comment": "Label for description of custom first Function",
   "_5akc1Q.comment": "Error message for unsupported values. Do not remove the double single quotes around the placeholder text, as it is needed to wrap the placeholder text in single quotes.",
@@ -1494,6 +1497,7 @@
   "_Y/bcmG.comment": "Client Certificate Password Label Display Name",
   "_Y0H9aX.comment": "This is shown as an aria label on button as well as the tooltip that is shown after clicking the button",
   "_Y9kBz5.comment": "Label for description of custom dataUriToBinary Function",
+  "_YABOLz.comment": "The title of the child item field in the static result query action",
   "_YCFhzp.comment": "Add the current node and its children to the map",
   "_YHsAKl.comment": "Label For Operation Description in About Panel",
   "_YIBDSH.comment": "This is a period in time in days. {days} is replaced by the number and d is an abbreviation of days",
