advanced mode sqb

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -359,6 +359,7 @@
   "FDWfqM": "Secure Outputs",
   "FGS2fS": "has failed",
   "FHsP9y": "(UTC+05:45) Kathmandu",
+  "FIL1Nt": "Condition is too complex or invalid. Unable to switch to basic mode",
   "FIT7i0": "20",
   "FN5zHQ": "Returns a section of a string defined by the start index and the end index",
   "FNbA9+": "Expand",
@@ -1123,6 +1124,7 @@
   "_FDWfqM.comment": "title for secure outputs setting",
   "_FGS2fS.comment": "failed run",
   "_FHsP9y.comment": "Timezone value ",
+  "_FIL1Nt.comment": "Error message when unable to switch to basic mode",
   "_FIT7i0.comment": "Hour of the day",
   "_FN5zHQ.comment": "Label for description of custom slice Function",
   "_FNbA9+.comment": "Expand, making the node bigger, showing the contents",
