Added section on portal version

--- a/apps/logic-apps-ux-docs/docs/tsg.mdx
+++ b/apps/logic-apps-ux-docs/docs/tsg.mdx
@@ -71,6 +71,18 @@ These network logs may contain sensitive information, so please do not share the
 
 :::
 
+### Finding your portal version
+
+To get the currently active portal version follow these steps:
+
+1. Navigate to a workflow
+2. Open the Azure monitoring tools with `Ctrl+Alt+D`
+3. In the bottom right of the designer there should be a yellow box
+4. Find the line `Loaded extensions:` and click on `Details`
+5. You will find the currently active designer version next to the line that says `Microsoft_Azure_EMA:`
+
+![](./img/tsg/portalVersionBox.png)
+
 ### Determining if issues are a Frontend or Backend issue
 
 Some things that may indicate a backend issue are:
