Handle situations where the generated XSLT and the mapping don't match

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -510,6 +510,7 @@
   "N0pS6Y": "Target schema",
   "N2CF0J": "Required. The key name of the form data values to return.",
   "N4dEVo": "Headers",
+  "NHnG2S": "The generated XSLT does not match the current mapping.",
   "NPUFgH": "Status",
   "NWxGWN": "Enter unique property name",
   "NeyUAh": "(UTC-03:00) City of Buenos Aires",
@@ -1274,6 +1275,7 @@
   "_N0pS6Y.comment": "Target schema",
   "_N2CF0J.comment": "Required string parameter to be used as key for triggerFormDataMultiValues function",
   "_N4dEVo.comment": "Display name for headers in outputs",
+  "_NHnG2S.comment": "Message on mismatched XSLT and attempting to test maps",
   "_NPUFgH.comment": "Label text for retry status",
   "_NWxGWN.comment": "Placeholder text for new property name",
   "_NeyUAh.comment": "Timezone value ",
@@ -1583,6 +1585,7 @@
   "_cqiqcf.comment": "Label text for retry start time",
   "_cr0UnG.comment": "Hour of the day",
   "_cscezV.comment": "Required collection parameter to apply skip function on",
+  "_ctI9Pp.comment": "Message on missing XSLT and attempting to test maps",
   "_d4xMIx.comment": "Timezone value ",
   "_dBWIjR.comment": "Title for an unconnected required schema card",
   "_dBxX0M.comment": "Text for the \"Add Trigger\" page header",
@@ -2093,6 +2096,7 @@
   "cqiqcf": "Start time",
   "cr0UnG": "9",
   "cscezV": "Required. The collection to skip the first Count objects from.",
+  "ctI9Pp": "Generate XSLT first before attempting to test mappings.",
   "d4xMIx": "(UTC+02:00) Harare, Pretoria",
   "dBWIjR": "Schema is missing required inputs",
   "dBxX0M": "Add a trigger",
