--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1571,6 +1571,7 @@
   "_ba9yGJ.comment": "Button text for loading more runs",
   "_bf7078.comment": "Label for description of custom max Function",
   "_bnStSJ.comment": "Timezone value ",
+  "_bsgS8m.comment": "Preview tag for preview connector",
   "_bv9QPA.comment": "Label for Date type dynamically added parameter",
   "_bwfJdj.comment": "Text to show which node the target node is run after",
   "_bx3qeC.comment": "Timezone value ",
@@ -2089,6 +2090,7 @@
   "ba9yGJ": "Load more",
   "bf7078": "Returns the maximum value in the input array of numbers",
   "bnStSJ": "(UTC+05:30) Chennai, Kolkata, Mumbai, New Delhi",
+  "bsgS8m": "Preview",
   "bv9QPA": "Date",
   "bwfJdj": "Run after {sourceNodeId}",
   "bx3qeC": "(UTC-03:00) Brasilia",
