--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -163,6 +163,7 @@
   "4wjJs0": "14",
   "5+MuPz": "Enter a valid double.",
   "5FINOY": "Workflow has parameter validation errors on the following operations: {invalidNodes}",
+  "5HGtu7": "Function removed from current location. Function exists elsewhere.",
   "5J7j9k": "Required. The XPath expression to evaluate.",
   "5MWmiO": "Line Number",
   "5OvGgn": "Body",
@@ -935,6 +936,7 @@
   "_4wjJs0.comment": "Hour of the day",
   "_5+MuPz.comment": "Error validation message",
   "_5FINOY.comment": "Error message to show when there are invalid connections in the nodes.",
+  "_5HGtu7.comment": "Message on deleting connection that exists in multiple spots",
   "_5J7j9k.comment": "Required xpath parameter to identify which xPath to evaluate",
   "_5MWmiO.comment": "The title of the line number field in the static result parseJson action",
   "_5OvGgn.comment": "The title of the body field in the static result query action",
